# cpp-serialization-benchmark

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  benchmark_result.txt
.github/workflows/: unix.yml
definitions/: graph.capnp  graph.fbs
external_lib/cista/: CMakeLists.txt  cista.h
include/csb/: benchmark_result.txt  cista_offset_graph.h  cista_raw_graph.h  generate_graph.h  graph.h  graph_constants.h  graph_constants.h.in  std_graph.h  traverse_graph.h
include/csb/benches/: capnp.h  cereal.h  cista_offset.h  cista_offset_slim.h  cista_raw.h  fbs.h  zpp_bits.h
include/utl/: get_or_create.h  to_map.h  to_vec.h
src/: capnp.cc  cereal.cc  cista.cc  fbs.cc  main.cc  zpp_bits.cc
